feat: update openapi generated packages and updated api spec
