# src/main/java/com/kcm/msp/dev/app/development/prototype/webflux/microservice/service/PetService.java
@@ -1,6 +1,7 @@
 package com.kcm.msp.dev.app.development.prototype.webflux.microservice.service;
 
-import com.kcm.msp.dev.app.development.prototype.webflux.microservice.models.Pet;
+import com.kcm.msp.dev.app.development.prototype.webflux.microservice.server.models.CreatePetRequest;
+import com.kcm.msp.dev.app.development.prototype.webflux.microservice.server.models.Pet;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
@@ -10,4 +11,6 @@ public interface PetService {
   Flux<Pet> emitPets();
 
   Mono<Pet> showPetById(String id);
+
+  Mono<Pet> createPet(CreatePetRequest request);
 }
