# src/main/java/com/kcm/msp/dev/app/development/prototype/webflux/microservice/service/impl/PetServiceImpl.java
@@ -1,11 +1,15 @@
 package com.kcm.msp.dev.app.development.prototype.webflux.microservice.service.impl;
 
-import com.kcm.msp.dev.app.development.prototype.webflux.microservice.models.Pet;
+import com.kcm.msp.dev.app.development.prototype.webflux.microservice.server.models.CreatePetRequest;
+import com.kcm.msp.dev.app.development.prototype.webflux.microservice.server.models.Pet;
 import com.kcm.msp.dev.app.development.prototype.webflux.microservice.service.PetService;
 import java.time.Duration;
 import java.time.LocalDate;
-import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
+import java.util.Random;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Flux;
@@ -14,15 +18,26 @@ import reactor.core.publisher.Mono;
 @Service
 public class PetServiceImpl implements PetService {
 
+  public static final Random RANDOM = new Random();
+  private static final List<Pet> SAMPLE_PETS =
+      Stream.iterate(1, n -> n + 1)
+          .limit(21)
+          .map(
+              value ->
+                  new Pet()
+                      .id(Long.valueOf(value))
+                      .name("petName" + value)
+                      .tag("petTag" + value)
+                      .dateOfBirth(LocalDate.now())
+                      .ownerEmail("test" + value + "@email.com"))
+          .collect(Collectors.toList());
+
   @Override
   public Flux<Pet> listPets(final Integer limit) {
     if (limit == null || limit < 0) {
       return Flux.empty();
     }
-    List<Pet> results = new ArrayList<>();
-    for (int i = 0; i < 8000; i++) {
-      results.add(new Pet().id((long) i).name("petName").tag("petTag"));
-    }
+    List<Pet> results = SAMPLE_PETS.stream().limit(limit).collect(Collectors.toList());
     return Flux.fromIterable(results);
   }
 
@@ -37,5 +52,19 @@ public class PetServiceImpl implements PetService {
       return Mono.empty();
     }
     return Mono.just(new Pet().id(123L).name("petName").tag("petTag").dateOfBirth(LocalDate.now()));
+  }
+
+  @Override
+  public Mono<Pet> createPet(final CreatePetRequest request) {
+    Objects.requireNonNull(request, "CreatePetRequest cannot be null");
+    final Pet pet =
+        new Pet()
+            .id(RANDOM.nextLong())
+            .name(request.getName())
+            .tag(request.getTag())
+            .dateOfBirth(request.getDateOfBirth())
+            .ownerEmail(request.getOwnerEmail());
+    SAMPLE_PETS.add(pet);
+    return Mono.just(pet);
   }
 }
